# testapi

./: .dockerignore  .gitignore  Dockerfile  database.py  main.py  pyproject.toml  repository.py  router.py  schemas.py
app/: main.py
app/api/v1/: router.py
app/auth/: config.py  crud.py  dependencies.py  jwt_handler.py  models.py  router.py  routes.py  schemas.py  utils.py
app/db/: database.py  repository.py
app/middleware/: auth_middleware.py
app/models/: task_model.py  user_model.py
app/schemas/: schemas.py  task_schemas.py  user_schemas.py
frontend/: app.js  index.html  style.css
